feat(plugin): implement cluster-wide state synchronization